z-index issue solved

--- a/style.scss
+++ b/style.scss
@@ -45,7 +45,9 @@ html{
 							a{
 								text-decoration: none;
 								color: black;
+
 							}
+							z-index: 6;
 							position: absolute;
 							right: -15%;
 							top: -15px;
@@ -458,6 +460,7 @@ html{
 			h1{
 				span{
 					right: -30px !important;
+					z-index: 4;
 				}
 			}
 		}
@@ -486,6 +489,7 @@ html{
 			h1{
 				span{
 					right: 15px !important;
+					z-index: 4;
 				}
 			}
 		}
@@ -511,6 +515,7 @@ html{
 					font-size: 35px !important;
 					span{
 						right: -30px !important;
+						z-index: 4;
 
 					}
 				}
